css/style.css
/* Main */
html {
  background-color: #22282D;
  visibility: hidden;
}

#body_container {
  min-height: calc(100vh - 2em);
  font-family: Verdana, Helvetica, Arial, sans-serif;
}

#main_container {
  max-width: 90em;
  padding-top: 0.3em;
  margin: auto;
  line-height: 1.2em;
}

/* Style Row */
.row {
  display: -webkit-flex;
  -webkit-flex-wrap: wrap;
  display: flex;
  flex-wrap: wrap;
}

/* Make the columns stack on top of each other */
.row>.column {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}

.column-100 {
  width: 100%;
  flex: 0 0 100%
}

.column>label {
  display: block;
  margin: 0.3em 0;
}

.display-inline {
  display: inline-block !important;
}

/* Header */
#header_container {
  font-size: 0.8em;
  color: #dfdfdf;
  margin: 0 auto;
}

.lang_select_on {
  font-weight: bold;
}

.lang_select_off {
  cursor: pointer;
  text-decoration: underline;
}

#disclaimer_div {
  font-size: 1em;
  font-weight: bold;
}

/* Title */
#title {
  margin: 1em 0 1.5em 0;
  width: 100%;
  color: #dfdfdf;
  font-size: 1.7em;
  position: relative;
}

/* Filters */
.filter_div {
  margin-top: 0.4em;
  margin-bottom: 0.4em;
  color: #dfdfdf;
  font-size: 1em;
}

#filter_container {
  display: flow-root;
  margin: 1em auto;
}

#members_prefix {
  display: default;
}

#filter_members {
  font-size: 1em;
}

input {
  transform: scale(1.3);
}

/* Separator */
.separator {
  width: 98%;
  margin-top: 0.75em;
  margin-bottom: 1em;
  color: #474747;
  border-color: #474747;
  border-style: solid;
}

.horizontal_separator {
  color: #474747;
}

/* Chart */
.container_chart {
  overflow: auto;
}

#container {
  min-width: 57em;
  margin: 0;
  padding: 0;
}

#info_tooltip {
  text-align: left;
  min-width: 18em;
  /* for loading images */
  max-width: 20em;
}

.fields_container {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 20em;
}

.anychart-tooltip {
  position: absolute;
  z-index: 5;
}

/* Info details */
#elem_info_container {
  display: flow-root;
  margin-left: 1em;
  margin-bottom: 1em;
}

#elem_date {
  margin-top: 1em;
  margin-bottom: 1em;
  display: inline-block;
  width: calc(100% - 70px);
  color: #ffffff;
  font-size: 1.2em;
  text-align: center;
}

.info_elem {
  float: left;
  color: #dfdfdf;
  min-width: 10em;
  max-width: 20em;
  background-color: #2d3135;
  border-radius: 0.5em;
  padding: 0.7em 0.7em;
  margin: 0.25em;
}

img {
  display: inline-block;
  max-width: 18em;
  height: 10em;
  width: auto;
  border-radius: 0.3em;
  margin-bottom: 0.3em;
  box-shadow: 0px 0px 3px #000;
}

.out_link:link,
.out_link:visited {
  color: #dfdfdf;
}

/* Footer */
#footer {
  margin-top: 0;
  /* take available whitespace */
  height: 1.2em;
  /* calc height when limited content */
  text-align: center;
  font-size: 0.75em;
}

#email_link:link,
#email_link:visited {
  color: #6c72d3;
}

#liveFilters {
  font-size: 1rem;
  color: white;
  background-color: rgb(223, 77, 24);
  border: 1px solid white;
  border-radius: 3px;
  margin: 1em 0;
  padding: 0.3em;
  cursor: pointer;
  display: block;
  min-width: 90px;
}

.hidden {
  display: none !important;
}

.page-title {
  width: 100%;
  flex-wrap: wrap;
}

.page-title h1 {
  margin-bottom: 1em;
}

.page-title span {
  display: block;
  margin: 0.2em 0;
  font-size: 0.8em;
  color: #ffffff;
}

.center-text {
  text-align: center;
}

.left-text {
  text-align: left;
}

.right-text {
  text-align: right;
}

.zindex-10 {
  z-index: 10;
}

select.data_paging {
  float: left;
  margin: 2em 0 1em 1em;
  min-width: 100px;
  font-size: 1em;
}

.legend_container {
  margin-top: 1.2em;
  color: #dfdfdf;
  text-align: center;
  font-size: 0.7em;
}

.box {
  position: relative;
  margin-left: 2em;
}

.box:before {
  position: absolute;
  left: -1.7em;
  content: "";
  height: 1.1em;
  width: 1.1em;
  margin-bottom: 0.75em;
  border: 1px solid #474747;
}

.saerom {
  --saerom-color: #3288bd;
}

.saerom:before {
  background-color: var(--saerom-color);
}

.hayoung {
  --hayoung-color: yellow;
}

.hayoung:before {
  background-color: var(--hayoung-color);
}

.jiwon {
  --jiwon-color: #fdae61;
}

.jiwon:before {
  background-color: var(--jiwon-color);
}

.jisun {
  --jisun-color: #e6f598;
}

.jisun:before {
  background-color: var(--jisun-color);
}

.chaeyoung {
  --chaeyoung-color: purple;
}

.chaeyoung:before {
  background-color: var(--chaeyoung-color);
}

.seoyeon {
  --seoyeon-color: #66c2a5;
}

.seoyeon:before {
  background-color: var(--seoyeon-color);
}

.nagyung {
  --nagyung-color: brown;
}

.nagyung:before {
  background-color: var(--nagyung-color);
}

.jiheon {
  --jiheon-color: #d53e4f;
}

.jiheon:before {
  background-color: var(--jiheon-color);
}

.gyuri {
  --gyuri-color: #ada99e;
}

.gyuri:before {
  background-color: var(--gyuri-color);
}

.hapbang {
  --hapbang-color: goldenrod;
}

.hapbang:before {
  background-color: var(--hapbang-color);
}

.multiple {
  --multiple-color: #5e4fa2;
}

.multiple:before {
  background-color: var(--multiple-color);
}

/* media query section */
@media only screen and (max-width: 599px) {
  .row>.column {
    flex: 0 0 100%;
    max-width: 100%;
    text-align: center;
  }

  .column>label {
    text-align: left;
  }

  .page-title h1 {
    line-height: 3rem;
  }

  .page-title span {
    line-height: 2rem;
  }
}

@media screen and (min-width: 600px) {

  #header_container>.column,
  .row>.column {
    flex: 0 0 27%;
    max-width: 30%;
  }

  .column>label {
    font-size: 0.8em;
  }

  .row>.column-50 {
    flex: 0 0 40%;
    max-width: 50%;
  }

  #title {
    margin-top: 1.5em;
    margin-bottom: 1.3em;
  }

  #filter_membership,
  #filter_subs {
    width: 100%;
    float: none;
    text-align: left;
    margin-left: 1em;
  }

  input {
    transform: scale(1);
  }
}

@media screen and (min-width: 800px) {
  .row>.column-50 {
    flex: 0 0 42%;
    max-width: 50%;
  }
}

@media screen and (min-width: 991px) {

  #header_container>.column,
  .row>.column {
    flex: 0 0 30%;
    max-width: 30%;
  }

  .row>.column-50 {
    flex: 0 0 44%;
    max-width: 50%;
  }

  .column-25 {
    flex: 0 0 25%;
    max-width: 25%;
  }

  #change_lang_div.column {
    text-align: left;
  }

  #disclaimer_div.column {
    text-align: center;
  }

  #last_updated_div.column {
    text-align: right;
  }
}

